--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=9094
 server.servlet.context-path=/ingbank
 ## Database Properties
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://13.126.11.147:3306/ingbank?autoReconnect=true&useSSL=false
-spring.datasource.username = inguser1
-spring.datasource.password = H@ckath0n
+spring.datasource.url = jdbc:mysql://3.15.203.179:3306/ingdb?autoReconnect=true&useSSL=false
+spring.datasource.username = inguser2
+spring.datasource.password = root@123
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
